<resources>
    <string name="banner_ad_unit_id">ca-app-pub-3889032681139142/8666737012</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Impostazioni</string>
    <string name="action_icon_preferences">Cambia Icona</string>
    <string name="send_email">Inviare Email?</string>
    <string name="ok">OK</string>
    <string name="app_market_link">"market://details?id="</string>
    <string name="app_google_play_store_link">"https://play.google.com/store/apps/details?id="</string>
    <string name="some_error">Si è verificato un errore</string>
    <string name="home">Home</string>
    <string name="random">Random</string>
    <string name="video">Video</string>
    <string name="favorites">Preferiti</string>
    <string name="info">Informazioni</string>
    <string name="app_subname">La miglior app (di Ludo)</string>
    <string name="blank_edit_text">--</string>
    <string name="rightcursor">Cursore Destro</string>
    <string name="leftcursor">Cursore Sinistro</string>
    <string name="search">Cerca:</string>
    <string name="Stop_label">stop</string>
    <string name="Play_label">play</string>
    <string name="novideo">Nessun video disponibile</string>
    <string name="retryConnection">Riprova</string>
    <string name="preferiti_add_label">Aggiungi ai preferiti</string>
    <string name="video_originale_label">Video originale</string>
    <string name="nascondi_audio_label">Nascondi audio</string>
    <string name="positive_label">OK, grazie %s!</string>
    <string name="audio_esistente_label">Questo audio esiste già nei preferiti.</string>
    <string name="salvato_correttamente_audio_label">Audio salvato nei preferiti con successo!</string>
    <string name="salvato_fallito_audio_label">Salvataggio nei preferiti fallito!</string>
    <string name="nofavorite">Non hai aggiunto nessun audio fra i preferiti!</string>
    <string name="deletefavorite">Per cancellare un audio da questa lista, tieni premuto sul pulsante corrispondente.</string>
    <string name="audio_rimosso_preferiti_label">Audio rimosso dai preferiti con successo!</string>
    <string name="audio_non_rimosso_preferiti_label">Si è verificato un errore nella rimozione del preferito.</string>
    <string name="max_audio_reached_label">Hai raggiunto il massimo di audio!</string>
    <string name="randombutton">Frase casuale!</string>
    <string name="randomdescription">Non sai cosa scegliere? Fai fare tutto all\'app!</string>
    <string name="thumbnail_label">Thumbnail</string>
    <string name="dislike_label">Dislike</string>
    <string name="views_label">Views</string>
    <string name="likes_label">Likes</string>
    <string name="send_audio_label">Invia audio</string>
    <string name="condividi_audio_label">Condividi audio</string>
    <string name="MIME_AUDIO_MP3">audio/mpeg</string>
    <string name="MIME_AUDIO_ANY">audio/*</string>
    <string name="ask_permission_label">Per condividere un audio, devi concedere all\'app il permesso di scrivere nella memoria.</string>
    <string name="ask_permission_suoneria_label">Per impostare questa suoneria, devi concedere all\'app il permesso di scrivere nella memoria.</string>
    <string name="generic_error_label">Oops! Si è verificato un errore.</string>
    <string name="dopo_label">DOPO</string>
    <string name="giammai_label">Giammai!</string>
    <string name="do_you_like_label">Ti piace l\'app? Lasciaci un feedback sul Play Store!</string>
    <string name="extra_audio_info"><![CDATA[Audio disponibile nell\'app LudoThornSoundBox: https://play.google.com/store/apps/details?id=net.ddns.andrewnetwork.ludothornsoundbox&hl=it \n\n Voce di Ludo Thorn!]]></string>
    <string name="audio_nascosti_label">Audio nascosti</string>
    <string name="usa_font_app_label">Usa font dell\'app</string>
    <string name="usa_font_app_descruzuibe_label">Usa font dell\'app invece del classico font di sistema per tutta l\'app.</string>
    <string name="usa_font_app_key">usa_font_app_key</string>
    <string name="cambia_icona_key">cambia_icona_key</string>
    <string name="mandatory_setting_label">Riavvio obbligatorio</string>
    <string name="mandatory_setting_summary_label">Per effettuare la modifica è necessario riavviare l\'app. Vuoi riavviare automaticamente? Potrebbe richiedere qualche secondo.</string>
    <string name="cambia_icona_summary">Cambia icona dalla quale l\'app viene lanciata.</string>
    <string name="cambia_icona_title">Cambia icona del Launcher</string>
    <string name="carica_audio_insieme_key">carica_audio_insieme_key</string>
    <string name="carica_audio_insieme_title">Carica audio in gruppo</string>
    <string name="carica_audio_insieme_summary">Se abilitato, le informazioni degli audio verranno caricate tutte in una volta,  all\'avvio dell\'app. Questa scelta potrebbe richiedere molta attesa in fase di avvio.</string>
    <string name="audio_options">Opzioni audio</string>
    <string name="mostra_info_in_audio_key">mostra_info_in_audio_key</string>
    <string name="mostra_info_in_audio_title">Mostra pulsante info audio</string>
    <string name="mostra_info_in_audio_summary">Mostra pulsante per le opzioni di ogni audio all\'interno del bottone audio. Questa interazione evita di dover tenere premuto su un audio per visualizzarne le opzioni.</string>
    <string name="audio_nascosti_title">Audio nascosti</string>
    <string name="audio_nascosti_summary">Visualizza gli audio che hai nascosto nella home.</string>
    <string name="audio_nascosti_key">audio_nascosti_key</string>
    <string name="dimensione_pulsanti_key">dimensione_pulsanti_key</string>
    <string name="dimensione_pulsanti_title">Dimensione pulsanti</string>
    <string name="dimensione_pulsanti_summary">Modifica la dimensione dei pulsanti nella Home.</string>
    <string name="opzioni_extra_title">Opzioni extra</string>
    <string name="reset_app_title">Resetta applicazione</string>
    <string name="reset_app_summary">Riporta l\'applicazione alle impostazioni di base.</string>
    <string name="reset_app_key">reset_app_key</string>
    <string name="credits_key">credits_key</string>
    <string name="credits_title">Crediti</string>
    <string name="credits_summary">Visualizza crediti su Ludo Thorn e autore dell\'app.</string>
    <string name="nessun_audio_in_riproduzione_label">Nessun audio in riproduzione</string>
    <string name="icon_1_content_description">Icona di default con busto e radio.</string>
    <string name="icon_1_description">Icona di default con busto.</string>
    <string name="icon_2_description">Icona classica del canale</string>
    <string name="icon_3_description">Icona disegnata male</string>
    <string name="sblocca_label">Sblocca</string>
    <string name="audio_number_description_label">Audio n°%d</string>
    <string name="info_not_available_label">Informazione non disponibile</string>
    <string name="nessun_audio_nascosto_label">Nessun audio nascosto!</string>
    <string name="select_all_label">Seleziona Tutto</string>
    <string name="pag_iniziale_key">pag_iniziale</string>
    <string name="pag_iniziale_title">Pagina iniziale</string>
    <string name="pag_iniziale_summary">Imposta la pagina iniziale da caricare all\'avvio dell\'app.</string>
    <string name="salva_label">Salva</string>
    <string name="cambia_ordine_key">cambia_ordine_key</string>
    <string name="cambia_ordine_summary">Cambia l\'ordine delle icone nel menù di navigazione.</string>
    <string name="cambia_ordine_title">Cambia ordine pagine</string>
    <string name="main_activity_label">Ludo Thorn App</string>
    <string name="modifiche_layout_title">Modifiche Layout</string>
    <string name="modifiche_layout_summary">Altre modifiche grafiche generali</string>
    <string name="preferenze_audio_title">Preferenze generali audio</string>
    <string name="preferenze_audio_summary">Preferenze grafiche e funzionali</string>
    <string name="opzioni_generali_title">Opzioni generali</string>
    <string name="foto_creatore_dell_app">Foto creatore dell\'app</string>
    <string name="foto_di_ludo">Foto di Ludo</string>
    <string name="l_app_fa_cagare_label">L\'app fa cagare? Segnalacelo a:</string>
    <string name="ringraziamenti_label">Ringraziamenti:</string>
    <string name="ringraziamenti_value">Franco Giuseppe e Piero Gattuso</string>
    <string name="mail_label_value">Mail: %s</string>
    <string name="app_sviluppata_label">App sviluppata da: Andrea De Matteis</string>
    <string name="ludo_thorn_label">Ludo Thorn</string>
    <string name="imposta_come_suoneria">Imposta come suoneria</string>
    <string name="suoneria_cambiata_label">Suoneria cambiata con successo</string>
    <string name="suoneria_notifiche_cambiata_label">Suoneria delle notifiche cambiata con successo</string>
    <string name="imposta_come_notifica">Imposta come suono di notifica</string>
    <string name="generic_error_suoneria_label">Oops! Si è verificato un errore. Verificare se sono state concesse all\'app le autorizzazioni necessarie.</string>
    <string name="necessary_write_settings_permission">Per cambiare la suoneria è necessario concedere all\'app l\'autorizzazione di cambiare le impostazioni di sistema e riprovare.</string>
    <string name="money_label">Money</string>
    <string name="altro_label">Altro</string>
    <string name="merchandise_title">Merchandise</string>
    <string name="patreon_title">Patreon</string>
    <string name="schermate_label">Schermate</string>
    <string name="error_current_position">Non è possibile cambiare la visibilità di questa schermata poiché attualmente visualizzata nella sezione principale.</string>
    <string name="error_first_position">Non è possibile cambiare la visibilità di questa schermata poiché attualmente impostata come pagina iniziale.</string>
    <string name="web_browser_label">Browser web</string>
    <string name="close_label">Chiudi</string>
    <string name="open_browser_label">Apri nel tuo browser</string>
    <string name="guarda_su_youtube_label">Guarda su YouTube</string>
    <string name="dal_video_label">Dal video: %s</string>
    <string name="video_non_disponibile_label">Video non disponibile.</string>
    <string name="countdown_delete_favorite_message">L\'audio verrà rimosso in %d secondi. Per annullare, cliccare di nuovo sull\'icona.</string>
    <string name="countdown_delete_favorite_video_message">Il video verrà rimosso in %d secondi. Per annullare, cliccare di nuovo sull\'icona.</string>
    <string name="deleted_favorite_message">Preferito cancellato.</string>
    <string name="canceled_operation_message">Operazione annullata.</string>
    <string name="audio_collegati_label">Audio collegati</string>
    <string name="no_label">No</string>
    <string name="progress_video_loading_label">Carico gli ultimi video dai canali di %s, attendi…</string>
    <string name="audio_list_empty">Non c\'è ancora nessun audio!</string>
    <string name="cerca_label">Cerca</string>
    <string name="inverti_label">Inverti ordine</string>
    <string name="ordina_data_label">Ordina per data</string>
    <string name="ordina_nome_label">Ordina per nome</string>
    <string name="search_audio">Cerca audio</string>
    <string name="audio_label">Audio</string>
    <string name="video_aggiunto_preferiti">Video aggiunto nei preferiti con successo.</string>
    <string name="nofavorite_video">Non hai ancora aggiunto nessun video fra i preferiti.</string>
    <string name="max_video_reached_label">Hai raggiunto il numero massimo di video preferiti!</string>
    <string name="social_title">Social</string>
</resources>