<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/group_schermate"
        android:title="@string/schermate_label">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@id/action_home"
                    android:icon="@drawable/ic_home_black_24dp"
                    android:title="@string/home" />

                <item
                    android:id="@id/action_random"
                    android:icon="@drawable/ic_dado_casuale"
                    android:title="@string/random" />

                <item
                    android:id="@id/action_video"
                    android:icon="@drawable/ic_video_black"
                    android:title="@string/video" />

                <item
                    android:id="@id/action_favorites"
                    android:icon="@drawable/ic_star_black_24dp"
                    android:title="@string/favorites" />
            </group>
        </menu>
    </item>
    <item android:title="@string/money_label">
        <menu>
            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/action_social"
                    android:icon="@drawable/ic_person_black"
                    android:title="@string/social_title" />
                <item
                    android:id="@+id/action_merchandise"
                    android:icon="@drawable/ic_merchandise"
                    android:title="@string/merchandise_title" />

                <item
                    android:id="@+id/action_patreon"
                    android:icon="@drawable/ic_patreon"
                    android:title="@string/patreon_title" />
            </group>
        </menu>
    </item>

    <item android:title="@string/altro_label">
        <menu>
            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/action_credits"
                    android:icon="@drawable/ic_credits_black"
                    android:title="@string/credits_title" />

                <item
                    android:id="@+id/action_settings"
                    android:icon="@drawable/ic_settings_black"
                    android:title="@string/action_settings" />
            </group>
        </menu>
    </item>
</menu>
