<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<item android:id="@+id/preferiti"
    android:icon="@drawable/ic_star_black_24dp"
    android:title="@string/preferiti_add_label"/>
    <item android:id="@+id/video_collegato"
        android:icon="@drawable/ic_video_black"
    android:title="@string/video_originale_label"/>
    <item android:id="@+id/condividi_audio"
        android:icon="@drawable/ic_share_black"
        android:title="@string/condividi_audio_label"/>
    <item android:id="@+id/nascondi_audio"
        android:icon="@drawable/ic_audio_black"
    android:title="@string/nascondi_audio_label"/>
    <item android:id="@+id/suoneria_audio"
    android:icon="@drawable/ic_notifications_black"
    android:title="@string/imposta_come_suoneria"/>
    <item android:id="@+id/suoneria_notifica_audio"
        android:icon="@drawable/ic_notifications_black"
        android:title="@string/imposta_come_notifica"/>
</menu>