<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_home"
        android:icon="@drawable/ic_home_white_24dp"
        android:title="@string/home" />
    <item android:id="@+id/action_random"
        android:title="@string/random"
       android:icon="@drawable/ic_action_name"/>
    <item android:id="@+id/action_video"
        android:title="@string/video"
        android:icon="@drawable/ic_video_white_24dp" />
    <item android:id="@+id/action_favorites"
        android:title="@string/favorites"
        android:icon="@drawable/ic_star_white_24dp" />
    <!--<item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_settings_white" />-->

</menu>