<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/searchlabel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/search"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textColorLink="@android:color/white"
            android:textSize="18sp" />

        <net.ddns.andrewnetwork.ludothornsoundbox.utils.view.CustomEditText
            android:id="@+id/searchstring"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:autofillHints="@string/blank_edit_text"
            android:ems="6"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:hint="@string/blank_edit_text"
            android:inputType="textPersonName"
            android:shadowColor="@android:color/white"
            android:textColor="@android:color/white"
            android:textColorHighlight="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textColorLink="@android:color/white"
            android:textSize="18sp" />

        <ImageButton
            android:id="@+id/play"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/Play_label"
            app:srcCompat="@drawable/ic_play_white" />

        <ImageButton
            android:id="@+id/stop"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/Stop_label"
            app:srcCompat="@drawable/ic_stop_white" />

    </LinearLayout>
</layout>