<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="TEST1">

    <Preference
        android:key="basic_preference"
        android:title="TEST2"
        android:summary="TEST2SUMMARY" />

    <Preference
        android:key="stylish_preference"
        android:title="TEST3"
        android:summary="TEST3SUMMARY" />

    <Preference
        android:key="@string/nessun_audio_in_riproduzione_label"
        android:title="@string/nessun_audio_in_riproduzione_label"
        android:summary="This preference has an icon"
        android:icon="@android:drawable/ic_menu_camera" />

    <PreferenceCategory
        android:title="TEST4">

        <CheckBoxPreference
            android:key="checkbox_preference"
            android:title="A"
            android:summary="AA" />

        <SwitchPreference
            android:key="@string/usa_font_app_key"
            android:title="@string/usa_font_app_label"
            android:summary="@string/usa_font_app_descruzuibe_label" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="AAA">

        <EditTextPreference
            android:key="edittext_preference"
            android:title="AAAA"
            android:summary="AAAA"
            android:dialogTitle="AAAAA" />

        <ListPreference
            android:key="list_preference"
            android:title="AAAA"
            android:summary="AAAA"
            android:entries="@array/VoiceData"
            android:entryValues="@array/VoiceData"
            android:dialogTitle="AAAAAAA" />

        <MultiSelectListPreference
            android:key="multi_select_list_preference"
            android:title="AAAAAA"
            android:summary="AAAAAAAAAAA"
            android:entries="@array/VoiceData"
            android:entryValues="@array/VoiceData"
            android:dialogTitle="aaaaaaaaaaa"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="test">

        <!-- This PreferenceScreen tag serves as a screen break (similar to page break
             in word processing). Like for other preference types, we assign a key
             here so it is able to save and restore its instance state. -->
        <PreferenceScreen
            android:key="screen_preference"
            android:title="test"
            android:summary="test">

            <!-- You can place more preferences here that will be shown on the next screen. -->

            <CheckBoxPreference
                android:key="next_screen_checkbox_preference"
                android:title="VoiceData"
                android:summary="VoiceData" />

        </PreferenceScreen>

        <PreferenceScreen
            android:title="VoiceData"
            android:summary="VoiceData">

            <intent android:action="android.intent.action.VIEW"
                android:data="http://www.android.com" />

        </PreferenceScreen>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="VoiceData">

        <CheckBoxPreference
            android:key="parent_checkbox_preference"
            android:title="VoiceData"
            android:summary="VoiceData" />

        <!-- The visual style of a child is defined by this styled theme attribute. -->
        <CheckBoxPreference
            android:key="child_checkbox_preference"
            android:dependency="parent_checkbox_preference"
            android:layout="?android:attr/preferenceLayoutChild"
            android:title="VoiceData"
            android:summary="VoiceData" />

    </PreferenceCategory>

</PreferenceScreen>