<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/player_background"
        android:focusableInTouchMode="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/audio_played_label"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:textStyle="bold"
            android:fontFamily="@font/knewave"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/nessun_audio_in_riproduzione_label"
            android:scrollbars="horizontal"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/play"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <ImageButton
            android:id="@+id/play"
            android:layout_width="@dimen/input_size_xxs"
            android:layout_height="0dp"
            android:layout_gravity="end"
            android:layout_marginStart="10dp"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/Play_label"
            app:srcCompat="@drawable/ic_play_white"
            app:layout_constraintEnd_toStartOf="@id/stop"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <ImageButton
            android:id="@+id/stop"
            android:layout_width="@dimen/input_size_xxs"
            android:layout_height="0dp"
            android:layout_gravity="end"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/Stop_label"
            app:srcCompat="@drawable/ic_stop_white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <SeekBar
            android:id="@+id/audio_progress"
            android:layout_width="0dp"
            android:layout_height="7dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="7dp"
            style="?android:attr/progressBarStyleHorizontal"
            android:max="100"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>